feat: Product addon (#942)
